--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "Interactive visualization library for concept map",
   "main": "cmap.js",
   "scripts": {
-    "test": "mocha --compilers coffee:coffee-script/register"
+    "test": "mocha --compilers coffee:coffee-script/register",
+    "test-browser": "browser-sync start --files='./cmap.js, test/test.html, test/*.js' --server --startPath='test/test.html'"
   },
   "devDependencies": {
+    "browser-sync": "*",
     "coffee-script": "*",
     "mocha": "*"
   },
