--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "mocha"
   },
   "devDependencies": {
-    "mocha": "^2.2.5"
+    "mocha": "^2.2.5",
+    "sinon": "^1.16.1"
   },
   "repository": {
     "type": "git",
