--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "test": "mocha"
   },
   "devDependencies": {
-    "mocha": "^2.2.5",
-    "sinon": "^1.16.1"
+    "mocha": "^2.2.5"
   },
   "repository": {
     "type": "git",
